--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body{
 	text-align: left;
-	font-family:  "Courier";
-	background: blue;
+	font-family:  "Arial";
+	background: pink;
+	font-size: 40px;
 }
